--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <!--Custom Style file-->
-        <link rel="stylesheet" href="./CSS/style.css">
+        <link rel="stylesheet" href="./css/style.css">
 
     </head>
     <body>
