added navigation bar links

--- a/index.html
+++ b/index.html
@@ -18,12 +18,31 @@
     <body>
          <!--creates header element to contain nav-bar--> 
              <!--navigation bar element-->
-             <nav class="nav">
-                 <div class="nav-menu flex-row">
-                     <div class="nav-brand"></div>
-                     <a href="index.html" class="text-gray">home</a>
-                 </div>
-             </nav>
+            <nav class="nav">
+                <div class="nav-menu flex-row">
+                    <div class="nav-brand"></div>
+                        <a href="index.html" class="text-gray">home</a>
+                    </div>
+                    <div>
+                       <ul class="nav-items">
+                          <li class="nav-link">
+                              <a href="index.html">Home</a>
+                          <li class="nav-link">
+                              <a href="index.html">About</a>
+                          <li class="nav-link">
+                              <a href="index.html">Art</a>
+                          <li class="nav-link">
+                              <a href="index.html">Poetry</a>
+                          <li class="nav-link">
+                              <a href="index.html">Blog</a>
+                          <li class="nav-link">
+                              <a href="index.html">Reviews</a>
+                          </li>
+                       </ul>
+                    </div>                    
+                </div>
+                    
+            </nav>
      
         <!--Custom javascript file-->
         <script src="./js/main.js" async defer></script>
