collapse toggle menu

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
             <nav class="nav">
                 <div class="nav-menu flex-row">
                     <div class="nav-brand">
-                        <a href="index.html" class="text-gray">Blog</a>
+                        <a href="index.html" class="text-gray">A Coder's Blog</a>
+                    </div>
+                    <div class="toggle-collapse">
+                      <div class="toggle-icons">
+                        <i class="fas fa-bars"></i>
+                      </div>
                     </div>
                     <div>
                         <ul class="nav-items">
@@ -50,7 +55,7 @@
                        </ul>
                     </div>   
                     <div class="social text-grey">
-                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#" ><i class="fab fa-twitter "></i></a>
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a href="#"><i class="fab fa-github-alt"></i></a>
                     </div>                 
@@ -61,7 +66,7 @@
 
 
 
-                  
+
         <!--Custom javascript file-->
         <script src="./js/main.js" ></script>
     </body>
