--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 
 
 
-
+        <!--Custom jQuery library file-->
+        <script src="./js/jquery3.6.0.min.js" ></script>
         <!--Custom javascript file-->
         <script src="./js/main.js" ></script>
     </body>
